# Dynamic-Stoploss-Optimizer

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SKILL.md  __main__.py  optimizer.py  pyproject.toml  requirements.txt  stoploss_strategies.py  test_stoploss.py
.github/workflows/: ci.yml
docs/: RESEARCH_NOTES.md
legacy/: PROJECT_SUMMARY.md  QUICKSTART.md  __init__.py  backtester.py  example_usage.py  optimizer.py  stoploss_strategies.py  test_stoploss.py
src/dso/: __init__.py  attribution.py  backtest.py  compare.py  data.py  metrics.py  regime.py  walk_forward.py
src/dso/stops/: __init__.py  atr.py  base.py  chandelier.py  donchian.py  max_drawdown.py  moving_average.py  parabolic_sar.py  supertrend.py  time_stop.py  volatility.py
tests/: conftest.py  test_attribution.py  test_backtest.py  test_compare.py  test_data.py  test_metrics.py  test_regime.py  test_stops.py  test_walk_forward.py
