[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-stoploss-optimizer"
version = "2.0.0"
description = "9 个动态止损策略的可复现实验框架，含 walk-forward、事件回测与 Deflated Sharpe Ratio"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "stoploss", "trailing-stop", "atr", "chandelier", "supertrend",
    "parabolic-sar", "donchian", "regime-detection", "walk-forward",
    "backtest", "deflated-sharpe", "triple-barrier", "quantitative-trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
yfinance = ["yfinance>=0.2"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/gaaiyun/Dynamic-Stoploss-Optimizer"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dso*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
exclude = ["legacy"]
